Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <img src="images/logo.png" alt="logo">
+    <img src="images/home.png" alt="logo">
   </a>
 
   <!-- Right Navigation -->
@@ -17,11 +17,13 @@
       <div class="dropdown">
         <img src="https://kitt.lewagon.com/placeholder/users/rhosyn" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><%= link_to "Profile", "https://github.com/rhosyn", target_blank = {target: "_blank"}%>
+          </li>
         </ul>
       </div>
     </div>
   </div>
 </div>
+<!-- <li><a href="#">Profile</a></li>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Log Out</a></li> -->
