--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -14,7 +14,7 @@ $gray-base:       $gray;
 $brand-primary:   $blue;
 $brand-success:   $green;
 $brand-info:      $yellow;
-$brand-danger:    $red;
+$brand-danger:    $blue;
 $brand-warning:   $orange;
 
 // Buttons & inputs' radius
