--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,12 +1,14 @@
 ---
 title: Rhosyn's page -- My Team
 ---
-<div class = avatar-team>
+<div class ="avatar-team">
   <ul class="list-inline text-center">
     <% %w(rhosyn bdlb77 jasonhbegleiter).each do |gh_username| %>
     <li>
       <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{gh_username}", class: "img-circle avatar" %>
-      <h5><%= gh_username.capitalize %></h5>
+      <div class ="avatar-ind">
+        <h6><i class="fa fa-github"></i><%= link_to "#{gh_username}", "https://github.com/#{gh_username}", target_blank = {target: "_blank"}%></h6>
+      </div>
     </li>
     <% end %>
   </ul>
